# userpath_fastrack

./: .gitignore  log.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/userpath_msgs/: UserpointInstruction.h
devel/lib/pkgconfig/: userpath.pc  userpath_msgs.pc
devel/lib/python2.7/dist-packages/userpath_msgs/msg/: _UserpointInstruction.py  __init__.py
devel/lib/userpath/: position_velocity_userpath_planner_manager_node
devel/share/common-lisp/ros/userpath_msgs/msg/: UserpointInstruction.lisp  _package.lisp  _package_UserpointInstruction.lisp  userpath_msgs-msg.asd
devel/share/gennodejs/ros/userpath_msgs/msg/: UserpointInstruction.js  _index.js
devel/share/roseus/ros/userpath_msgs/: manifest.l
devel/share/userpath/cmake/: userpathConfig.cmake
devel/share/userpath_msgs/cmake/: userpath_msgs-msg-extras.cmake  userpath_msgs-msg-paths.cmake  userpath_msgsConfig.cmake
src/userpath/: CMakeLists.txt  package.xml
src/userpath/include/userpath/: .userpath_planner_manager.h.swp  userpath_planner_manager (original).h  userpath_planner_manager.h  userpoint.h
src/userpath/launch/: .hardware_demo.launch.swp  .hw_demo.launch.swp  .position_velocity_userpath_planner_manager.launch.swp  hardware_demo.launch  hw_demo(original).launch  hw_demo.launch  position_velocity_userpath_planner_manager.launch  software_demo.launch  sw_demo.launch
src/userpath/src/: .position_velocity_userpath_planner_manager_node.cpp.swp  log.txt  position_velocity_userpath_planner_manager_node.cpp  userpath_planner_manager.cpp
src/userpath_msgs/: CMakeLists.txt
(+1 files in other folders)
